--- a/public/css/stylenav.css
+++ b/public/css/stylenav.css
@@ -1,18 +1,20 @@
 .menu{
     position:fixed;
     right: 0;
-    transform: translateX(140px);
+    transform: translateX();
     transition:all 2s ease;
     z-index:2000;
 }
 
 .menu{
-    background:#707070;
+    background: rgba(87,151,193,1);
+    background: linear-gradient(135deg, rgba(87,151,193,1) 18%, rgba(87,151,193,0.99) 21%, rgba(63,113,151,0.94) 52%, rgba(63,113,151,0.89) 77%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5797c1', endColorstr='#3f7197', GradientType=1 );
+    
     float:right;
     height:100%;
-    width:230px;
-    box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.363);
-    
+    width:400px;
+    box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.363); 
 }
 
 
@@ -58,8 +60,6 @@ hr{
 .cabeza{
     display: inline-block;
     width: 100%;
-    height: 80px;
-    padding: 10px; 
     color: azure;
 }
 
@@ -85,7 +85,7 @@ hr{
     height:100%;
 }
 
-.infor #nom{
+#nom{
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
@@ -99,7 +99,7 @@ hr{
     cursor: pointer;
 }
 
-.infor #rol{
+#rol{
     
     display: block;
     margin-top: 0;
@@ -187,6 +187,7 @@ hr{
 }
 
 .table{
+    
     display:block;
     width:100%;
     
